    pointers.  (reported by Sean Ross)
  * bug fix: PROFILE output is printed nicely even for large numerical
    values.  (thanks to Zach Beane)
  * bug fix: streams with element-type (SIGNED-BYTE <N>) for <N>
    greater than 32 handle EOF correctly.
  * bug fix: on X86 an immediate argument of the IMUL instruction is
    correctly printed in disassembly. (thanks to Lutz Euler)
  * bug fix: class slots in redefined classes preserve their old
    values.  (thanks to Bruno Haible and Nikodemus Siivola)
  * bug fix: compilation of funcalls of CXX+R (e.g. CDDR) now
    succeeds.  (reported by Marco Baringer)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** READ-SEQUENCE now works on ECHO-STREAMs.
    ** RATIONALIZE works more according to its specification.  (thanks
       to Bruno Haible)

changes in sbcl-0.8.11 relative to sbcl-0.8.10:
  * fixed bug 313: source-transform for <fun-name> was erroneously
    applied to a call of a value of a variable with name <fun-name>.
    (reported by Antonio Menezes Leitao)
  * on X86 fixed bug 298, revealed by Paul F. Dietz' test suite: SBCL
    can remove dead unknown-values globs from the middle of the stack.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.